--- a/BulletHell/BulletHell/BulletHell.csproj
+++ b/BulletHell/BulletHell/BulletHell.csproj
@@ -28,6 +28,7 @@
     <Content Include="index.html" />
     <Content Include="lib\phaser.js" />
     <Content Include="lib\phaser.min.js" />
+    <Content Include="lib\collections.js" />
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -37,11 +38,14 @@
     <TypeScriptCompile Include="lib\phaser.d.ts" />
     <TypeScriptCompile Include="lib\pixi.d.ts" />
     <TypeScriptCompile Include="MainMenu.ts" />
-    <TypeScriptCompile Include="Player.ts" />
+    <TypeScriptCompile Include="lib\collections.ts" />
+    <TypeScriptCompile Include="Ship.ts" />
     <TypeScriptCompile Include="Preloader.ts" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="lib\phaser.map" />
+    <Content Include="lib\collections.js.map" />
+    <Content Include="packages.config" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
